tests/baselines/reference/parserMemberAccessorDeclaration17(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserMemberAccessorDeclaration17.ts(2,13): error TS1051: A 'set' accessor cannot have an optional parameter.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserMemberAccessorDeclaration17.ts (1 errors) ====
    class C {
       set Foo(a?: number) { }
                ~
!!! error TS1051: A 'set' accessor cannot have an optional parameter.
    }